<resources>
    <string name="app_name">Just Java</string>
    <string name="hint_name">Name</string>
    <string name="topping">Topping</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">ORDER</string>

    <string name="subject">JustJava order for</string>
    <string name="oredr_name">Name:</string>
    <string name="order_add_whipped_cream">Add whipped cream?</string>
    <string name="order_add_choclate">Add chocolate?</string>
    <string name="order_quantity">Quantity:</string>
    <string name="order_total">Total: $</string>
    <string name="order_thank_you">Thank you!</string>

    <string name="toast_increment">You cannot have more than 100 coffee</string>
    <string name="toast_decrement">You cannot have less than 1 coffee</string>
</resources>
