<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/hint_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/topping"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/whipped_cream_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:onClick="setWhippedCream"/>

        <CheckBox
            android:id="@+id/chocolate_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:onClick="setChocolate"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minus_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/plus_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>

</ScrollView>